[gd_scene load_steps=8 format=3 uid="uid://dgibixtokxadt"]

[ext_resource type="Script" uid="uid://cctkokw6fvimv" path="res://scripts/background.gd" id="1_80nbo"]
[ext_resource type="Script" uid="uid://bkbiafrscicjx" path="res://scripts/game.gd" id="1_e2o6t"]
[ext_resource type="PackedScene" uid="uid://b1dft0qhlapm7" path="res://scenes/paddle.tscn" id="2_e2o6t"]
[ext_resource type="PackedScene" uid="uid://crd2follmab1j" path="res://scenes/ball.tscn" id="4_fc0e3"]
[ext_resource type="PackedScene" uid="uid://dkn336fxt5vj1" path="res://scenes/wall.tscn" id="5_7jktm"]
[ext_resource type="PackedScene" uid="uid://bxqw7vqdme4l2" path="res://scenes/score_detector.tscn" id="6_ryrav"]
[ext_resource type="PackedScene" uid="uid://ggcw3vbcpmvm" path="res://scenes/hud.tscn" id="7_u5sy4"]

[node name="Game" type="Node2D"]
script = ExtResource("1_e2o6t")
max_score = 1

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)
script = ExtResource("1_80nbo")

[node name="PaddleP1" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(50, 360)

[node name="PaddleP2" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(1230, 360)
is_player_two = true

[node name="Ball" parent="." instance=ExtResource("4_fc0e3")]
position = Vector2(640, 360)

[node name="WallTop" parent="." instance=ExtResource("5_7jktm")]
position = Vector2(640, -10)

[node name="WallBottom" parent="." instance=ExtResource("5_7jktm")]
position = Vector2(640, 730)

[node name="ScoreDetectorLeft" parent="." instance=ExtResource("6_ryrav")]
position = Vector2(-10, 350)

[node name="ScoreDetectorRight" parent="." instance=ExtResource("6_ryrav")]
position = Vector2(1290, 350)
is_right = true

[node name="HUD" parent="." instance=ExtResource("7_u5sy4")]

[node name="LaunchTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="player_scored" from="ScoreDetectorLeft" to="." method="_on_score_detector_player_scored"]
[connection signal="player_scored" from="ScoreDetectorRight" to="." method="_on_score_detector_player_scored"]
[connection signal="start_game" from="HUD" to="." method="start_game"]
[connection signal="timeout" from="LaunchTimer" to="." method="launch_ball"]
